edición archivo fpst

--- a/investigadores.html
+++ b/investigadores.html
@@ -471,7 +471,7 @@
                             <h6>Luis Manuel Fernández Hernández</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
-                                <p>Profesión</p>
+                                <p>Profesor de tiempo completo</p>
                                 <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal5">
                                     Ver más
                                 </button>
@@ -490,8 +490,8 @@
                 <div class="modal-body">
                     <div style="display: flex; align-items: center;">
                         <div style="flex: 1;">
-                            <p><strong>Nombre:</strong> Nombre del Miembro</p>
-                            <p><strong>Profesión:</strong> Detalle de la profesión</p>
+                            <p><strong>Nombre:</strong> Luis Manuel Fernández Hernández</p>
+                            <p><strong>Profesión:</strong> Profesor de tiempo completo</p>
                             <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
                         </div>
                         <div>
@@ -520,7 +520,7 @@
                             </div>
                         </div>
                         <div class="team-text">
-                            <h2>Nombre</h2>
+                            <h6>Sergio Armando Rodríguez</h6>
                             <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
                             <div class="info-container">
                                 <p>Profesión</p>
