--- a/index.html
+++ b/index.html
@@ -190,6 +190,18 @@
                     <h2 class="text-center">Nancy Teresa Cabrera Fernández</h2>
                     <h3>Profesira de tiempo completo</h3>
                 </div>
+
+                <div class="testimonial-item">
+                    <div class="testimonial-img">
+                        <img src="img/investigadores/tcap6.png" alt="Image">
+                    </div>
+                    <p>
+                        Estar en el CCI me permitió innovar con soluciones.
+                    </p>
+                    <h2 class="text-center">Luis Manuel Fernández Hernández</h2>
+                    <h3>Profesor de tiempo completo</h3>
+                </div>
+
                 <div class="testimonial-item">
                     <div class="testimonial-img">
                         <img src="img/investigadores/tcap4.png" alt="Image">
@@ -215,23 +227,12 @@
 
                 <div class="testimonial-item">
                     <div class="testimonial-img">
-                        <img src="img/investigadores/tcap6.png" alt="Image">
-                    </div>
-                    <p>
-                        Estar en el CCI me permitió innovar con soluciones.
-                    </p>
-                    <h2 class="text-center">Luis Manuel Fernández Hernández</h2>
-                    <h3>Profesor</h3>
-                </div>
-
-                <div class="testimonial-item">
-                    <div class="testimonial-img">
                         <img src="img/investigadores/tcap7.png" alt="Image">
                     </div>
                     <p>
                         Gracias al CCI pude mejorar mis habilidades clave.
                     </p>
-                    <h2>Nombre</h2>
+                    <h2>Sergio Armando Rodríguez</h2>
                     <h3>Profesión</h3>
                 </div>
 
