--- a/html/index.html
+++ b/html/index.html
@@ -86,14 +86,14 @@
           </li>
           <!-- Pages -->
           <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a href="tables-basic.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-dock-top"></i>
               <div class="text-truncate" data-i18n="Account Settings">Usuarios</div>
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
                 <a href="pages-account-settings-account.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Account">Agregare usuarios</div>
+                  <div class="text-truncate" data-i18n="Account">Agregar usuarios</div>
                 </a>
               </li>
               <li class="menu-item">
@@ -104,7 +104,7 @@
             </ul>
           </li>
           <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a href="inestigadoresG.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
               <div class="text-truncate" data-i18n="Authentications">Investigadores</div>
             </a>
@@ -206,20 +206,11 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">
-                      <span class="d-flex align-items-center align-middle">
-                        <i class="flex-shrink-0 icon-base bx bx-credit-card icon-md me-3"></i><span
-                          class="flex-grow-1 align-middle">Billing Plan</span>
-                        <span class="flex-shrink-0 badge rounded-pill bg-danger">4</span>
-                      </span>
-                    </a>
-                  </li>
-                  <li>
                     <div class="dropdown-divider my-1"></div>
                   </li>
                   <li>
                     <a class="dropdown-item" href="../inicioSesion.html">
-                      <i class="icon-base bx bx-power-off icon-md me-3"></i><span>Log Out</span>
+                      <i class="icon-base bx bx-power-off icon-md me-3"></i><span>Cerrar Sesión</span>
                     </a>
                   </li>
                 </ul>
