--- a/html/inestigadoresG.html
+++ b/html/inestigadoresG.html
@@ -161,13 +161,6 @@
             <!-- /Search -->
 
             <ul class="navbar-nav flex-row align-items-center ms-md-auto">
-              <!-- Place this tag where you want the button to render. -->
-              <!-- <li class="nav-item lh-1 me-4">
-                <a class="github-button"
-                  href="https://github.com/themeselection/sneat-bootstrap-html-admin-template-free"
-                  data-icon="octicon-star" data-size="large" data-show-count="true"
-                  aria-label="Star themeselection/sneat-html-admin-template-free on GitHub">Star</a>
-              </li> -->
 
               <!-- User -->
               <li class="nav-item navbar-dropdown dropdown-user dropdown">
@@ -206,15 +199,6 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">
-                      <span class="d-flex align-items-center align-middle">
-                        <i class="flex-shrink-0 icon-base bx bx-credit-card icon-md me-3"></i><span
-                          class="flex-grow-1 align-middle">Billing Plan</span>
-                        <span class="flex-shrink-0 badge rounded-pill bg-danger">4</span>
-                      </span>
-                    </a>
-                  </li>
-                  <li>
                     <div class="dropdown-divider my-1"></div>
                   </li>
                   <li>
@@ -238,7 +222,7 @@
 
               <!-- Hoverable Table rows -->
               <div class="card">
-                <h5 class="card-header">Usuarios</h5>
+                <h5 class="card-header">Investigadores</h5>
                 <div class="table-responsive text-nowrap">
                   <table class="table table-hover">
                     <thead>
