--- a/fpst.html
+++ b/fpst.html
@@ -301,7 +301,8 @@
                     <div class="mb-3">
                             <!-- Opción de selección (Radio Buttons) -->
                             <p>
-                                ¿Realizo actividades que me ayudan a sentirme relajado?</p>
+                                ¿Realizo actividades que me ayudan a sentirme relajado?
+                            </p>
                             <label for="1">1</label>
                             <input type="radio" id="si" name="boletin" value="totalmente"><br>
                             <label for="2">2</label>
