--- a/index.html
+++ b/index.html
@@ -230,7 +230,9 @@
                         <img src="img/investigadores/tcap7.png" alt="Image">
                     </div>
                     <p>
-                        Gracias al CCI pude mejorar mis habilidades clave.
+                     En el CCI he podido descubrir con claridad la complejidad laboral, y me he propuesto 
+                     sumar ideas que favorezcan su análisis y comprensión; y proveer de herramientas, 
+                     en mi campo profesional para subsanarlas.
                     </p>
                     <h2>Sergio Armando Rodríguez</h2>
                     <h3>Profesión</h3>
