--- a/investigadores.html
+++ b/investigadores.html
@@ -343,7 +343,7 @@
 </div>
 
 
-            
+         
 
 
                 <div class="col-lg-4 col-md-6">
@@ -395,118 +395,6 @@
     </div>
 </div>
 
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="team-img">
-                            <img src="img/investigadores/11.jpg" alt="Image">
-                            <div class="team-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="team-text">
-                            <h6>Celia Magdalena Correa González</h6>
-                            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
-                            <div class="info-container">
-                                <p>Profesora de tiempo completo</p>
-                                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal4">
-                                    Ver más
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-<!-- Modal -->
-<div class="modal fade" id="teamModal4" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
-    <div class="modal-dialog">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
-            </div>
-            <div class="modal-body">
-                <!-- Contenedor para la imagen y la primera parte del texto -->
-                <div class="d-flex align-items-start">
-                    <div class="flex-grow-1">
-                        <p><strong>Nombre:</strong> Celia Magdalena Correa González</p>
-                        <p><strong>Profesión:</strong> Profesora de tiempo completo</p>
-                        <p><strong>Biodata:</strong> Celia Magdalena Correa González. Profesora de Tiempo Completo en la Universidad Tecnológica de Nezahualcóyotl, en el área de inglés. He colaborado en diversos equipos de trabajo.</p>
-                    </div>
-                    <img src="img/investigadores/bfoto4.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
-                </div>
-
-                <!-- Párrafo de borde a borde -->
-                <p class="mt-3">
-                    Operatividad académica y laboral de la institución por más de veintiocho años con aportaciones en el área de idiomas, vinculación con el sector de 
-                    servicios, actualización de planes y programas de estudio, capacitación, transferencia tecnológica 
-                    y docencia a través de participaciones como representante institucional.
-                </p>
-
-                <!-- Párrafos adicionales de borde a borde -->
-                <p>Actualmente formo parte del Comité Institucional de Tutorías, como coordinadora divisional; del Comité de Ética, como vocal docente y como vocal de la Academia Institucional de Lengua Extranjera. La participación como representante sindical del gremio docente de la UTN tiempo atrás, me ha llevado a interesarme en las condiciones de contratación de los trabajadores y su bienestar, particularmente en su salud laboral de una manera integral.</p>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-            </div>
-        </div>
-    </div>
-</div>
-
-
-
-                <div class="col-lg-4 col-md-6">
-                    <div class="team-item">
-                        <div class="team-img">
-                            <img src="img/investigadores/10.jpg" alt="Image">
-                            <div class="team-social">
-                                <a href=""><i class="fab fa-twitter"></i></a>
-                                <a href=""><i class="fab fa-facebook-f"></i></a>
-                                <a href=""><i class="fab fa-linkedin-in"></i></a>
-                                <a href=""><i class="fab fa-instagram"></i></a>
-                            </div>
-                        </div>
-                        <div class="team-text">
-                            <h6>Luis Manuel Fernández Hernández</h6>
-                            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
-                            <div class="info-container">
-                                <p>Profesor de tiempo completo</p>
-                                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal5">
-                                    Ver más
-                                </button>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-
-      <!-- Modal -->
-      <div class="modal fade" id="teamModal5" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
-        <div class="modal-dialog">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
-                </div>
-                <div class="modal-body">
-                    <div style="display: flex; align-items: center;">
-                        <div style="flex: 1;">
-                            <p><strong>Nombre:</strong> Luis Manuel Fernández Hernández</p>
-                            <p><strong>Profesión:</strong> Profesor de tiempo completo</p>
-                            <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
-                        </div>
-                        <div>
-                            <img src="img/investigadores/bfoto5.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
-                        </div>
-                    </div>
-                </div>
-                <div class="modal-footer">
-                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                </div>
-            </div>
-        </div>
-    </div>
-
-
 
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
@@ -542,12 +430,17 @@
             <div class="modal-body">
                 <div style="display: flex; align-items: center;">
                     <div style="flex: 1;">
-                        <p><strong>Nombre:</strong> Nombre del Miembro</p>
+                        <p><strong>Nombre:</strong> Sergio Armando Rodríguez</p>
                         <p><strong>Profesión:</strong> Detalle de la profesión</p>
-                        <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
+                        <p><strong>Biodata:</strong> Sergio Armando Rodríguez es Licenciado en Educación y 
+                            Desarrollo Humano, y Actor y Locutor Profesional con más de 25 años de experiencia; 
+                            Catedrático Universitario en la Universidad Tecnológica de Nezahualcóyotl y la Universidad 
+                            La Salle.
+                        </p>
                     </div>
                     <div>
-                        <img src="img/investigadores/bfoto3.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
+                        <img src="img/investigadores/bfoto3.jpeg" alt="Foto del Miembro" 
+                        style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
                     </div>
                 </div>
             </div>
@@ -559,10 +452,123 @@
 </div>
 
 
-
+<div class="col-lg-4 col-md-6">
+    <div class="team-item">
+        <div class="team-img">
+            <img src="img/investigadores/10.jpg" alt="Image">
+            <div class="team-social">
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="team-text">
+            <h6>Luis Manuel Fernández Hernández</h6>
+            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
+            <div class="info-container">
+                <p>Profesor de tiempo completo</p>
+                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal5">
+                    Ver más
+                </button>
             </div>
         </div>
     </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="teamModal5" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+    <h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
+</div>
+<div class="modal-body">
+    <div style="display: flex; align-items: center;">
+        <div style="flex: 1;">
+            <p><strong>Nombre:</strong> Luis Manuel Fernández Hernández</p>
+            <p><strong>Profesión:</strong> Profesor de tiempo completo</p>
+            <p><strong>Biografía:</strong> Agregar más información sobre la persona, su experiencia y logros.</p>
+        </div>
+        <div>
+            <img src="img/investigadores/bfoto5.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
+        </div>
+    </div>
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+</div>
+</div>
+</div>
+</div>
+
+
+
+<div class="col-lg-4 col-md-6">
+    <div class="team-item">
+        <div class="team-img">
+            <img src="img/investigadores/11.jpg" alt="Image">
+            <div class="team-social">
+                <a href=""><i class="fab fa-twitter"></i></a>
+                <a href=""><i class="fab fa-facebook-f"></i></a>
+                <a href=""><i class="fab fa-linkedin-in"></i></a>
+                <a href=""><i class="fab fa-instagram"></i></a>
+            </div>
+        </div>
+        <div class="team-text">
+            <h6>Celia Magdalena Correa González</h6>
+            <!-- Contenedor para alinear "Profesión" y el botón en la misma línea -->
+            <div class="info-container">
+                <p>Profesora de tiempo completo</p>
+                <button class="btn custom-btn" data-bs-toggle="modal" data-bs-target="#teamModal4">
+                    Ver más
+                </button>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="teamModal4" tabindex="-1" aria-labelledby="teamModalLabel" aria-hidden="true">
+<div class="modal-dialog">
+<div class="modal-content">
+<div class="modal-header">
+<h5 class="modal-title" id="teamModalLabel">Más Información</h5> 
+</div>
+<div class="modal-body">
+<!-- Contenedor para la imagen y la primera parte del texto -->
+<div class="d-flex align-items-start">
+    <div class="flex-grow-1">
+        <p><strong>Nombre:</strong> Celia Magdalena Correa González</p>
+        <p><strong>Profesión:</strong> Profesora de tiempo completo</p>
+        <p><strong>Biodata:</strong> Celia Magdalena Correa González. Profesora de Tiempo Completo en la Universidad Tecnológica de Nezahualcóyotl, en el área de inglés. He colaborado en diversos equipos de trabajo.</p>
+    </div>
+    <img src="img/investigadores/bfoto4.jpeg" alt="Foto del Miembro" style="width: 215px; height: 280px; border-radius: 25px; margin-left: 15px;">
+</div>
+
+<!-- Párrafo de borde a borde -->
+<p class="mt-3">
+    Operatividad académica y laboral de la institución por más de veintiocho años con aportaciones en el área de idiomas, vinculación con el sector de 
+    servicios, actualización de planes y programas de estudio, capacitación, transferencia tecnológica 
+    y docencia a través de participaciones como representante institucional.
+</p>
+
+<!-- Párrafos adicionales de borde a borde -->
+<p>Actualmente formo parte del Comité Institucional de Tutorías, como coordinadora divisional; del Comité de Ética, como vocal docente y como vocal de la Academia Institucional de Lengua Extranjera. La participación como representante sindical del gremio docente de la UTN tiempo atrás, me ha llevado a interesarme en las condiciones de contratación de los trabajadores y su bienestar, particularmente en su salud laboral de una manera integral.</p>
+</div>
+<div class="modal-footer">
+<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
+</div>
+</div>
+</div>
+</div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!-- Team End -->
 
 
