--- a/html/layouts-without-navbar.html
+++ b/html/layouts-without-navbar.html
@@ -324,7 +324,7 @@
                   </a>
                 </li>
                 <li class="menu-item">
-                  <a href="pages-account-settings-connections.html" class="menu-link">
+                  <a href="misInventariosUS.html" class="menu-link">
                     <div class="text-truncate" data-i18n="Connections">Connections</div>
                   </a>
                 </li>
