--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
                         La investigación en el CCI me dio gran aprendizaje.
                     </p>
                     <h2 class="text-center">Nancy Teresa Cabrera Fernández</h2>
-                    <h3>Profesira de tiempo completo</h3>
+                    <h3>Profesora de tiempo completo</h3>
                 </div>
 
                 <div class="testimonial-item">
