--- a/html/listaInvetariosUS.html
+++ b/html/listaInvetariosUS.html
@@ -144,7 +144,7 @@
                           </div>
                         </div>
                         <div class="flex-grow-1">
-                          <h6 class="mb-0">Yanitzin Martinez</h6>
+                          <h6 class="mb-0">Nombre de usuario</h6>
                           <small class="text-body-secondary">Usuario</small>
                         </div>
                       </div>
