--- a/investigadores.html
+++ b/investigadores.html
@@ -150,7 +150,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/investigadores/1.3.jpg" alt="Image">
+                            <img src="img/investigadores/nancy.jpg" alt="Image">
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -212,7 +212,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/investigadores/2.2.jpg" alt="Image">
+                            <img src="img/investigadores/perea.jpg" alt="Image">
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -264,7 +264,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/investigadores/16.jpg" alt="Image">
+                            <img src="img/investigadores/elvia.jpg" alt="Image">
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -349,7 +349,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/investigadores/4.jpg" alt="Image">
+                            <img src="img/investigadores/pluma.jpg" alt="Image">
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -399,7 +399,7 @@
                 <div class="col-lg-4 col-md-6">
                     <div class="team-item">
                         <div class="team-img">
-                            <img src="img/investigadores/12.jpg" alt="Image">
+                            <img src="img/investigadores/sergio.jpg" alt="Image">
                             <div class="team-social">
                                 <a href=""><i class="fab fa-twitter"></i></a>
                                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -455,7 +455,7 @@
 <div class="col-lg-4 col-md-6">
     <div class="team-item">
         <div class="team-img">
-            <img src="img/investigadores/10.jpg" alt="Image">
+            <img src="img/investigadores/manuel.jpg" alt="Image">
             <div class="team-social">
                 <a href=""><i class="fab fa-twitter"></i></a>
                 <a href=""><i class="fab fa-facebook-f"></i></a>
@@ -507,7 +507,7 @@
 <div class="col-lg-4 col-md-6">
     <div class="team-item">
         <div class="team-img">
-            <img src="img/investigadores/11.jpg" alt="Image">
+            <img src="img/investigadores/celia.jpg" alt="Image">
             <div class="team-social">
                 <a href=""><i class="fab fa-twitter"></i></a>
                 <a href=""><i class="fab fa-facebook-f"></i></a>
