--- a/html/indexUs.html
+++ b/html/indexUs.html
@@ -247,7 +247,7 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  elaboradó por: LYL
+                  elaborado por: LYL
                 </div>
                 <!-- <div class="d-none d-lg-inline-block">
                   <a href="https://themeselection.com/item/category/admin-templates/" target="_blank"
