--- a/html/listaInvetariosUS.html
+++ b/html/listaInvetariosUS.html
@@ -374,7 +374,7 @@
                   <script>
                     document.write(new Date().getFullYear());
                   </script>
-                  elaboradó por: LYL
+                  elaborado por: LYL
                 </div>
                
               </div>
