--- a/html/misInventariosUS.html
+++ b/html/misInventariosUS.html
@@ -354,39 +354,26 @@
   </div>
 </div>
 
-
+<br>
+<br>
 
               <!-- Footer -->
           <footer class="content-footer footer bg-footer-theme">
-            <div class="container-xxl">
-              <div
-                class="footer-container d-flex align-items-center justify-content-between py-4 flex-md-row flex-column">
-                <div class="mb-2 mb-md-0">
-                  &#169;
-                  <script>
-                    document.write(new Date().getFullYear());
-                  </script>
-                  elaborado por: LYL
-                </div>
-                <!-- <div class="d-none d-lg-inline-block">
-                  <a href="https://themeselection.com/item/category/admin-templates/" target="_blank"
-                    class="footer-link me-4">Admin Templates</a>
+            <div class="copyright d-flex justify-content-center align-items-center min-vh-50 text-center">
+              <div>
+                  <a>Copyright &copy; <a href="#">Universidad Saludable</a>, Todos los derechos reservados.</a>
+                  <p> </p>
+                  <a>Diseñado por <a href="">11:11</a></a>
+                  <br>
+<br><br>
 
-                  <a href="https://themeselection.com/license/" class="footer-link me-4" target="_blank">License</a>
-                  <a href="https://themeselection.com/item/category/bootstrap-admin-templates/" target="_blank"
-                    class="footer-link me-4">Bootstrap Dashboard</a>
-
-                  <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
-                    target="_blank" class="footer-link me-4">Documentation</a>
-
-                  <a href="https://github.com/themeselection/sneat-bootstrap-html-admin-template-free/issues"
-                    target="_blank" class="footer-link">Support</a>
-                </div> -->
               </div>
+          </div>
             </div>
 
             
           </footer>
+          
           <!-- / Footer -->
 
 
