--- a/html/indexUs.html
+++ b/html/indexUs.html
@@ -66,7 +66,7 @@
         <ul class="menu-inner py-1">
           <!-- Dashboards -->
           <li class="menu-item active ">
-            <a href="javascript:void(0);" class="menu-link">
+            <a href="indexUs.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-home-smile"></i>
               <div class="text-truncate" data-i18n="Dashboards">Inicio</div>
               <span class="badge rounded-pill ms-auto">5</span>
