--- a/html/indexUs.html
+++ b/html/indexUs.html
@@ -93,7 +93,25 @@
             </a>
           </li>
           <!-- Misc -->
+
+          <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
+          <li class="menu-item">
+            <a href="soporte.html" class="menu-link active">
+              <i class="menu-icon tf-icons bx bx-support"></i>
+              <div class="text-truncate" data-i18n="Account Settings">Soporte</div>
+            </a>
+          </li>
+          <li class="menu-item">
+            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+              target="_blank" class="menu-link">
+              <i class="menu-icon tf-icons bx bx-file"></i>
+              <div class="text-truncate" data-i18n="Documentation">Documentacion</div>
+            </a>
+          </li>
         </ul>
+
+        </ul>
+        
       </aside>
       <!-- / Menu -->
 
