--- a/fpst.html
+++ b/fpst.html
@@ -122,7 +122,7 @@
     <div class="modal-dialog">
         <div class="modal-content">
             <div class="modal-header">
-                <h5 class="modal-title" id="testModalLabel">Cuestionario Sonnentang & Fritz</h5>
+                <h5 class="modal-title" id="testModalLabel">Cuestionario de Estrés Laboral del la OIT-OMS</h5>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <div class="modal-body">
@@ -606,7 +606,7 @@
             <img src="img/Post_fatigasub.png" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Cuestionario YOSREETAKE</h2>
+            <h2 class="blog-title">Cuestionario de Síntomas Subjetivos de Fatiga Yoshitake</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Desarrollado por el psicólogo japonés Yasuo Yamamoto</p>
                 <p><i class="far fa-list-alt"></i> Categoría: Evaluación de Fatiga subjetiva</p>
