--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                         <img src="img/investigadores/tcap6.png" alt="Image">
                     </div>
                     <p>
-                        Estar en el CCI me permitió innovar con soluciones.
+                        Compromiso y trabajo en equipo.
                     </p>
                     <h2 class="text-center">Luis Manuel Fernández Hernández</h2>
                     <h3>Profesor de tiempo completo</h3>
