--- a/fpst.html
+++ b/fpst.html
@@ -92,7 +92,7 @@
             <img src="img/Post_Sonnentang & Fritz.png" alt="Blog">
         </div>
         <div class="blog-content">
-            <h2 class="blog-title">Cuestionario de experiencias de recuperación -Sonnentang & Fritz-</h2>
+            <h2 class="blog-title">Cuestionario de Estrés Laboral del la OIT-OMS</h2>
             <div class="blog-meta">
                 <p><i class="far fa-user"></i> Desarrollado por los investigadores Sonja Sonnentang y Christoph Fritz.</p>
                 <p><i class="far fa-list-alt"></i> Categoría: Evaluación del estrés laboral</p>
