--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -82,44 +82,93 @@
 
           <!-- Apps & Pages -->
           <li class="menu-header small text-uppercase">
-            <span class="menu-header-text">Permisos </span>
+            <span class="menu-header-text">Menú Investigadores</span>
           </li>
           <!-- Pages -->
           <li class="menu-item">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-              <i class="menu-icon tf-icons bx bx-dock-top"></i>
-              <div class="text-truncate" data-i18n="Account Settings">Usuarios</div>
+              <i class="menu-icon tf-icons bx bx-user"></i>
+              <div class="text-truncate" data-i18n="Account Settings">Docentes</div>
             </a>
+
             <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="pages-account-settings-account.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Account">Agregare usuarios</div>
-                </a>
-              </li>
               <li class="menu-item">
                 <a href="pages-account-settings-notifications.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Notifications">Reportes</div>
                 </a>
               </li>
             </ul>
-          </li>
+        </li>
           <li class="menu-item">
             <a href="javascript:void(0);" class="menu-link menu-toggle">
-              <i class="menu-icon tf-icons bx bx-lock-open-alt"></i>
-              <div class="text-truncate" data-i18n="Authentications">Investigadores</div>
+              <i class="menu-icon tf-icons bx bx-volume-full"></i>
+              <div class="text-truncate" data-i18n="Authentications">Publicaciones</div>
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
                 <a href="auth-login-basic.html" class="menu-link" target="_blank">
-                  <div class="text-truncate" data-i18n="Basic">Agregar investigador</div>
+                  <div class="text-truncate" data-i18n="Basic">Informes</div>
+                </a>
+              </li>
+            </ul>
+
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                  <div class="text-truncate" data-i18n="Basic">Artículos</div>
+                </a>
+              </li>
+            </ul>
+
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                  <div class="text-truncate" data-i18n="Basic">Libros</div>
+                </a>
+              </li>
+            </ul>
+          
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                  <div class="text-truncate" data-i18n="Basic">Videos</div>
+                </a>
+              </li>
+            </ul>
+
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                  <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
+                </a>
+              </li>
+            </ul>
+
+
+          
+          </li>
+
+          <li class="menu-item">
+            <a href="javascript:void(0);" class="menu-link menu-toggle">
+              <i class="menu-icon tf-icons bx bx-file"></i>
+              <div class="text-truncate" data-i18n="Authentications">Instrumentos</div>
+            </a>
+            <ul class="menu-sub">
+              <li class="menu-item">
+                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                  <div class="text-truncate" data-i18n="Basic">Inventarios</div>
                 </a>
               </li>
             </ul>
           </li>
+  
+        </li>
+
+
           <!-- Misc -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="https://github.com/themeselection/sneat-bootstrap-html-admin-template-free/issues" target="_blank"
+            <a href="#" target="_blank"
               class="menu-link">
               <i class="menu-icon tf-icons bx bx-support"></i>
               <div class="text-truncate" data-i18n="Support">Soporte</div>
@@ -129,7 +178,7 @@
             <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
-              <div class="text-truncate" data-i18n="Documentation">Documentacion</div>
+              <div class="text-truncate" data-i18n="Documentation">Documentación</div>
             </a>
           </li>
         </ul>
