--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -130,7 +130,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
