--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -32,6 +32,7 @@
   <!--! Template customizer & Theme config files MUST be included after core stylesheets and helpers.js in the <head> section -->
   <!--? Config:  Mandatory theme config file contain global vars & default theme options, Set your preferred theme option in this file.  -->
   <script src="../assets/js/config.js"></script>
+
 </head>
 
 <body>
@@ -69,7 +70,6 @@
             <a href="javascript:void(0);" class="menu-link menu-toggle">
               <i class="menu-icon tf-icons bx bx-home-smile"></i>
               <div class="text-truncate" data-i18n="Dashboards">Inicio</div>
-              <span class="badge rounded-pill bg-danger ms-auto">5</span>
             </a>
             <ul class="menu-sub">
               <li class="menu-item active">
@@ -122,7 +122,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -149,17 +149,11 @@
           </li>
 
           <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+              target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
-              <div class="text-truncate" data-i18n="Authentications">Instrumentos</div>
+              <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
             </a>
-            <ul class="menu-sub">
-              <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
-                  <div class="text-truncate" data-i18n="Basic">Inventarios</div>
-                </a>
-              </li>
-            </ul>
           </li>
   
         </li>
@@ -167,13 +161,6 @@
 
           <!-- Misc -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
-          <li class="menu-item">
-            <a href="#" target="_blank"
-              class="menu-link">
-              <i class="menu-icon tf-icons bx bx-support"></i>
-              <div class="text-truncate" data-i18n="Support">Soporte</div>
-            </a>
-          </li>
           <li class="menu-item">
             <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
               target="_blank" class="menu-link">
@@ -255,20 +242,11 @@
                     </a>
                   </li>
                   <li>
-                    <a class="dropdown-item" href="#">
-                      <span class="d-flex align-items-center align-middle">
-                        <i class="flex-shrink-0 icon-base bx bx-credit-card icon-md me-3"></i><span
-                          class="flex-grow-1 align-middle">Billing Plan</span>
-                        <span class="flex-shrink-0 badge rounded-pill bg-danger">4</span>
-                      </span>
-                    </a>
-                  </li>
-                  <li>
                     <div class="dropdown-divider my-1"></div>
                   </li>
                   <li>
                     <a class="dropdown-item" href="../inicioSesion.html">
-                      <i class="icon-base bx bx-power-off icon-md me-3"></i><span>Log Out</span>
+                      <i class="icon-base bx bx-power-off icon-md me-3"></i><span>Cerrar sesión</span>
                     </a>
                   </li>
                 </ul>
@@ -284,7 +262,10 @@
         <div class="content-wrapper">
           <!-- Content -->
           <div class="container-xxl flex-grow-1 container-p-y">
-            <div class="row">
+              
+            <h1 style="color: #0a529a; font-family: Helvetica, Arial, sans-serif; font-weight: bold; text-align: center;">C.C.I.</h1>
+
+           <div class="row">
               <div class="col-xxl-8 mb-6 order-0">
                 <div class="card">
                   <div class="d-flex align-items-start row">
@@ -292,7 +273,9 @@
                       <div class="card-body">
                         <h5 class="card-title text-primary mb-3">INVESTIGADOR</h5>
                         <p class="mb-6">
-                          Perfil donde el adinistrador realizará altas, bajas y consultas de los diferentes
+                          Perfil donde el investigador podrá ver los reportes de los cuestionarios realizados por los docentes, tendra acceso a los documentos 
+                          de investigaciones, podrá dar de alta instrumentos, y podrá subir sus publicaciones del acervo digital. 
+            
                           investigadores
                         </p>
 
@@ -301,7 +284,7 @@
                     </div>
                     <div class="col-sm-5 text-center text-sm-left">
                       <div class="card-body pb-0 px-0 px-md-6">
-                        <img src="../assets/img/illustrations/man-with-laptop.png" height="175" alt="View Badge User" />
+                        <img src="../img/logoCCI.jpg" height="100" alt="View Badge User" class="Investigador"/>
                       </div>
                     </div>
                   </div>
