--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -114,7 +114,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
