--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -93,7 +93,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="pages-account-settings-notifications.html" class="menu-link">
+                <a href="reportes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Notifications">Reportes</div>
                 </a>
               </li>
@@ -106,7 +106,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
