--- a/html/libros.html
+++ b/html/libros.html
@@ -6,7 +6,7 @@
   <meta charset="utf-8" />
   <meta name="viewport"
     content="width=device-width, initial-scale=1.0, user-scalable=no, minimum-scale=1.0, maximum-scale=1.0" />
-  <title>investigador | PERFIL</title>
+  <title>Investigador | PERFIL</title>
   <meta name="description" content="" />
   <!-- Favicon -->
   <link rel="icon" type="image/x-icon" href="../img/utn-sincolor.png" />
@@ -94,7 +94,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="pages-account-settings-notifications.html" class="menu-link">
+                <a href="reportes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Notifications">Reportes</div>
                 </a>
               </li>
@@ -107,7 +107,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -115,7 +115,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -319,10 +319,10 @@
                                 ><i class="icon-base bx bx-volume-full me-1"></i> Publicar</a
                               >
                               <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="icon-base bx bx-edit-alt me-1"></i> Edit</a
+                                ><i class="icon-base bx bx-edit-alt me-1"></i> Editar</a
                               >
                               <a class="dropdown-item" href="javascript:void(0);"
-                                ><i class="icon-base bx bx-trash me-1"></i> Delete</a
+                                ><i class="icon-base bx bx-trash me-1"></i> Eliminar</a
                               >
                             </div>
                           </div>
