--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -222,7 +222,7 @@
                           </div>
                         </div>
                         <div class="flex-grow-1">
-                          <h6 class="mb-0">John Doe</h6>
+                          <h6 class="mb-0">Nombre investigador</h6>
                           <small class="text-body-secondary">Investigador</small>
                         </div>
                       </div>
@@ -263,7 +263,7 @@
           <!-- Content -->
           <div class="container-xxl flex-grow-1 container-p-y">
               
-            <h1 style="color: #0a529a; font-family: Helvetica, Arial, sans-serif; font-weight: bold; text-align: center;">C.C.I.</h1>
+            <h1 style="color: #0a529a; font-family: Helvetica, Arial, sans-serif; font-weight: bold; text-align: center;">Cuerpo Colegiado de Investigación</h1>
 
            <div class="row">
               <div class="col-xxl-8 mb-6 order-0">
@@ -360,9 +360,9 @@
                             <i class="icon-base bx bx-dots-vertical-rounded icon-lg text-body-secondary"></i>
                           </button>
                           <div class="dropdown-menu dropdown-menu-end" aria-labelledby="totalRevenue">
-                            <a class="dropdown-item" href="javascript:void(0);">Select All</a>
-                            <a class="dropdown-item" href="javascript:void(0);">Refresh</a>
-                            <a class="dropdown-item" href="javascript:void(0);">Share</a>
+                            <a class="dropdown-item" href="javascript:void(0);">Seleccionar todo</a>
+                            <a class="dropdown-item" href="javascript:void(0);">Actualizar</a>
+                            <a class="dropdown-item" href="javascript:void(0);">Compartir</a>
                           </div>
                         </div>
                       </div>
