--- a/html/articulos.html
+++ b/html/articulos.html
@@ -139,7 +139,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
