--- a/html/articulos.html
+++ b/html/articulos.html
@@ -94,8 +94,8 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="pages-account-settings-notifications.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Notifications">Reportes</div>
+                <a href="listasDocentes.html" class="menu-link">
+                  <div class="text-truncate" data-i18n="Notifications">Listas</div>
                 </a>
               </li>
             </ul>
@@ -147,7 +147,7 @@
           </li>
 
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+            <a href="instrumentos.html"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
@@ -159,7 +159,7 @@
           <!-- Otros -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+            <a href="documentacionInv.html"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
