--- a/html/indexIn.html
+++ b/html/indexIn.html
@@ -93,8 +93,8 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="reportes.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Notifications">Reportes</div>
+                <a href="listasDocentes.html" class="menu-link">
+                  <div class="text-truncate" data-i18n="Notifications">Listas</div>
                 </a>
               </li>
             </ul>
@@ -149,7 +149,7 @@
           </li>
 
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+            <a href="instrumentos.html"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
@@ -162,7 +162,7 @@
           <!-- Misc -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+            <a href="documentacionInv.html"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
