--- a/html/libros.html
+++ b/html/libros.html
@@ -94,8 +94,8 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="reportes.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Notifications">Reportes</div>
+                <a href="listasDocentes.html" class="menu-link">
+                  <div class="text-truncate" data-i18n="Notifications">Listas</div>
                 </a>
               </li>
             </ul>
@@ -139,7 +139,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="auth-login-basic.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link" target="_blank">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
@@ -159,7 +159,7 @@
           <!-- Otros -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
+            <a href="documentacionInv.html"
               target="_blank" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
