--- a/html/index.html
+++ b/html/index.html
@@ -86,7 +86,7 @@
           </li>
           <!-- Pages -->
           <li class="menu-item">
-            <a href="tables-basic.html" class="menu-link">
+            <a href="gestionUsuario.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-dock-top"></i>
               <div class="text-truncate" data-i18n="Account Settings">Usuarios</div>
             </a>
