correccion menu investigadores

--- a/html/documentacionInv.html
+++ b/html/documentacionInv.html
@@ -107,7 +107,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="informes.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -115,7 +115,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="articulos.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -123,7 +123,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="libros.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -131,7 +131,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="videos.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
@@ -139,7 +139,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="entrevistas.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
@@ -147,8 +147,7 @@
           </li>
 
           <li class="menu-item">
-            <a href="instrumentos.html"
-              target="_blank" class="menu-link">
+            <a href="instrumentos.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
             </a>
@@ -159,8 +158,7 @@
           <!-- Otros -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="documentacionInv.html"
-              target="_blank" class="menu-link">
+            <a href="documentacionInv.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
             </a>
