--- a/html/articulos.html
+++ b/html/articulos.html
@@ -107,7 +107,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="informes.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -115,7 +115,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="articulos.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -123,7 +123,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="libros.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -131,7 +131,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="videos.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
@@ -139,7 +139,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="entrevistas.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
