--- a/html/informes.html
+++ b/html/informes.html
@@ -109,7 +109,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="informes.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -117,7 +117,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="articulos.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -125,7 +125,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="libros.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -133,7 +133,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="videos.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
@@ -141,7 +141,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="entrevistas.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
