--- a/html/instrumentos.html
+++ b/html/instrumentos.html
@@ -109,7 +109,7 @@
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="informes.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -117,7 +117,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="articulos.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -125,7 +125,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="libros.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -133,7 +133,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="videos.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
@@ -141,7 +141,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="entrevistas.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
@@ -149,8 +149,7 @@
           </li>
 
           <li class="menu-item">
-            <a href="instrumentos.html"
-              target="_blank" class="menu-link">
+            <a href="instrumentos.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
             </a>
@@ -161,8 +160,7 @@
           <!-- Otros -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="documentacionInv.html"
-              target="_blank" class="menu-link">
+            <a href="documentacionInv.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
             </a>
