--- a/html/libros.html
+++ b/html/libros.html
@@ -67,18 +67,13 @@
         <div class="menu-inner-shadow"></div>
         <ul class="menu-inner py-1">
           <!-- Dashboards -->
-          <li class="menu-item active open">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+          <li class="menu-item active ">
+            <a href="indexIn.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-home-smile"></i>
               <div class="text-truncate" data-i18n="Dashboards">Inicio</div>
+              <span class="badge rounded-pill ms-auto">5</span>
             </a>
-            <ul class="menu-sub">
-              <li class="menu-item active">
-                <a href="index.html" class="menu-link">
-                  <div class="text-truncate" data-i18n="Analytics"></div>
-                </a>
-              </li>
-            </ul>
+           
           </li>
 
           <!-- Apps & Pages -->
@@ -87,7 +82,7 @@
           </li>
           <!-- Pages -->
           <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a href="listasDocentes.html" class="menu-link menu-toggle">
               <i class="menu-icon tf-icons bx bx-user"></i>
               <div class="text-truncate" data-i18n="Account Settings">Docentes</div>
             </a>
@@ -101,13 +96,13 @@
             </ul>
         </li>
           <li class="menu-item">
-            <a href="javascript:void(0);" class="menu-link menu-toggle">
+            <a href="#" class="menu-link menu-toggle">
               <i class="menu-icon tf-icons bx bx-volume-full"></i>
               <div class="text-truncate" data-i18n="Authentications">Publicaciones</div>
             </a>
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="informes.html" class="menu-link" target="_blank">
+                <a href="informes.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Informes</div>
                 </a>
               </li>
@@ -115,7 +110,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="articulos.html" class="menu-link" target="_blank">
+                <a href="articulos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Artículos</div>
                 </a>
               </li>
@@ -123,7 +118,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="libros.html" class="menu-link" target="_blank">
+                <a href="libros.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Libros</div>
                 </a>
               </li>
@@ -131,7 +126,7 @@
           
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="videos.html" class="menu-link" target="_blank">
+                <a href="videos.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Videos</div>
                 </a>
               </li>
@@ -139,7 +134,7 @@
 
             <ul class="menu-sub">
               <li class="menu-item">
-                <a href="entrevistas.html" class="menu-link" target="_blank">
+                <a href="entrevistas.html" class="menu-link">
                   <div class="text-truncate" data-i18n="Basic">Entrevistas</div>
                 </a>
               </li>
@@ -147,8 +142,7 @@
           </li>
 
           <li class="menu-item">
-            <a href="https://demos.themeselection.com/sneat-bootstrap-html-admin-template/documentation/"
-              target="_blank" class="menu-link">
+            <a href="instrumentos.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Instrumentos</div>
             </a>
@@ -159,8 +153,7 @@
           <!-- Otros -->
           <li class="menu-header small text-uppercase"><span class="menu-header-text">Otros</span></li>
           <li class="menu-item">
-            <a href="documentacionInv.html"
-              target="_blank" class="menu-link">
+            <a href="documentacionInv.html" class="menu-link">
               <i class="menu-icon tf-icons bx bx-file"></i>
               <div class="text-truncate" data-i18n="Documentation">Documentación</div>
             </a>
@@ -212,7 +205,7 @@
                           </div>
                         </div>
                         <div class="flex-grow-1">
-                          <h6 class="mb-0">John Doe</h6>
+                          <h6 class="mb-0">Nombre del investigador</h6>
                           <small class="text-body-secondary">Investigador</small>
                         </div>
                       </div>
